# pipchecker

./: Cargo.toml  README.md  requirements.txt
.github/workflows/: rust-clippy.yml
src/: main.rs  read_req.rs
src/api/: client.rs  mod.rs  pypi.rs
src/cmd/: command.rs
src/log/: logging.rs
src/menu/: display.rs
src/pip/: functions.rs
